[tool.poetry]
name = "tpools"
version = "0.0.1"
description = ""
authors = ["Shaun Ostoic <ostoic@uwindsor.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
trio = "^0.20"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-trio = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
